--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chiper-challenger",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chespisan.github.io/chiper-challenger/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
