--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.0",
-    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-js-pagination": "^3.0.4",
     "@types/styled-components": "^5.1.24"
   }
 }
