--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^17.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -25,6 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "npm run test -- --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,7 +48,27 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react-js-pagination": "^3.0.4",
-    "@types/styled-components": "^5.1.24"
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.24",
+    "lodash.debounce": "^4.0.8"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/serviceWorker.ts",
+      "!src/index.tsx",
+      "!src/reportWebVitals.ts",
+      "!src/styles/style.global.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
